# OpenCL-ICD-Loader

./: CMakeLists.txt  icd.h  icd_linux.c
